# melodify

./: README.md  generated_output_for_midi_from_json.mid  main.py  model_api.py  output.mid  pyproject.toml  requirements.txt  sendMIDI.js
.github/: CODEOWNERS
Fetch/: ai_model_agent.py  ai_model_user_agent.py  api_agent.py  json_midi.py  output.midi
backend/json_files/: selected_notes.json
handlers/: handle_json_to_midi.py
midi_output/: generated_output.mid  output1.mid  output2.mid
midi_parse/: json_midi.py  json_to_text.py  midi_dd.json  midi_parsing.py  midi_to_json.json  midi_to_json.py  midi_unparsing.py  minecraft_type_melody.mid  output123.mid  output_for_model.mid  output_for_model.midi  outputajksjdlhkfjahsjkdhjklhafkjhsdkljhfljkahlf.mid  parsed_midi_data.txt  syrusmidi.json  syrusmusic2.json  unparsed_midi_output1.mid
midi_parse/midi_data/Drums/: MMP_EMP5_100 bpm_16 bars_Drums_Loop_7.mid  MMP_EMP5_100 bpm_8 bars_Drums_Loop_3.mid  MMP_EMP5_110 bpm_16 bars_Drums_Loop_6.mid  MMP_EMP5_120 bpm_8 bars_Drums_Loop_1.mid  MMP_EMP5_120 bpm_8 bars_Drums_Loop_2.mid  MMP_EMP5_125 bpm_8 bars_Drums_Loop_4.mid  MMP_EMP5_125 bpm_8 bars_Drums_Loop_5.mid  MMP_EMP5_140 bpm_16 bars_Drums_Loop_10.mid  MMP_EMP5_90 bpm_16 bars_Drums_Loop_8.mid  MMP_EMP5_90 bpm_16 bars_Drums_Loop_9.mid
midi_parse/midi_data/Sequences/: MMP_EMP5_Fm_115 bpm_8 bars_Guitar Strum_Sequence_Loop_1.mid  MMP_EMP5_G_140 bpm_16 bars_Synth Pluck_Sequence_Loop_2.mid
