[tool.poetry]
name = "melodify"
version = "0.1.0"
description = "AI + MIDI + LIVE"
authors = ["Arnav Surve <arnav@surve.dev>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
Flask = "^3.0.3"
pretty-midi = "^0.2.10"
setuptools = "^75.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
